[tool.poetry]
name = "vttorganize"
version = "0.1.0"
description = "A tool to organize and convert VTT subtitle files to markdown transcripts"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vttorganize"}]

[tool.poetry.dependencies]
python = "^3.8"
webvtt-py = "^0.4.6"
dataclasses = {version = "^0.8", python = "<3.7"}
tqdm = "^4.65.0"
chardet = "^5.1.0"
jinja2 = "^3.1.2"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"

[tool.poetry.scripts]
vttorganize = "vttorganize.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
